changes in html to fix title alignment issues

--- a/assets/stylesheets/less/base.less
+++ b/assets/stylesheets/less/base.less
@@ -178,9 +178,9 @@ a{
 	position: relative;
 
 	#title-info{
-		// position: absolute;
-		// bottom: 35%;
-		// margin-top: 0px;
+		position: absolute;
+		bottom: 35%;
+		margin-top: 0px;
 		-webkit-transition: margin-top .35s ease;
         -o-transition: margin-top .35s ease;
         transition: margin-top .35s ease;
